[package]
name = "badi_date"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["case-insensitive", "filter-by-regex", "serde"] }
lazy_static = "1"
now = "0.1"
once_cell = "1"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sunrise = "1"
time = "0.3.36"
