[package]
name = "badi-date"
version = "0.1.0"
edition = "2021"
authors = ["Tom Grushka"]
description = "Provides dates for the Badí' (Bahá’í) calendar and conversions between Badí' and Gregorian dates."
homepage = "https://www.bahai.org"
repository = "https://github.com/dra11y/badi-date-rs"
license = "MIT"
keywords = ["bahai", "badi", "naw-ruz", "calendar", "date", "time", "conversion", "sunset"]
categories = ["date-and-time", "internationalization", "localization"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["case-insensitive", "filter-by-regex", "serde"] }
lazy_static = "1"
now = "0.1"
once_cell = "1"
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sunrise = "1"
time = "0.3.36"
